c4prj2_input/grade.txt
Grading at Mon Jan 13 03:12:40 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:12:26: error: ‘str’ undeclared (first use in this function)
     for(int i=0;i<strlen(str);i++)
                          ^
input.c:12:26: note: each undeclared identifier is reported only once for each function it appears in
input.c:18:18: error: unused variable ‘index’ [-Werror=unused-variable]
             char index[strlen(str)];
                  ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
